# baiken

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
data/: data.db  data.sql  init.json  nicknames.json  schema.sql
data/A.B.A/: A.B.A.json  aliases.json  images.json  info.json
data/Anji_Mito/: Anji_Mito.json  aliases.json  images.json  info.json
data/Asuka_R/: Asuka_R.json  aliases.json  images.json  info.json
data/Axl_Low/: Axl_Low.json  aliases.json  images.json  info.json
data/Baiken/: Baiken.json  aliases.json  images.json  info.json
data/Bedman/: Bedman.json  aliases.json  images.json  info.json
data/Bedman%3F/: Bedman%3F.json  aliases.json  images.json
data/Bridget/: Bridget.json  aliases.json  images.json  info.json
data/Chipp_Zanuff/: Chipp_Zanuff.json  aliases.json  images.json  info.json
data/Elphelt_Valentine/: Elphelt_Valentine.json  aliases.json  images.json  info.json
data/Faust/: Faust.json  aliases.json  images.json  info.json
data/Giovanna/: Giovanna.json  aliases.json  images.json  info.json
data/Goldlewis_Dickinson/: Goldlewis_Dickinson.json  aliases.json  images.json  info.json
data/Happy_Chaos/: Happy_Chaos.json  aliases.json  images.json  info.json
data/I-No/: I-No.json  aliases.json  images.json  info.json
data/Jack-O/: Jack-O.json  aliases.json  images.json  info.json
data/Johnny/: Johnny.json  aliases.json  images.json  info.json
data/Ky_Kiske/: Ky_Kiske.json  aliases.json  images.json  info.json
data/Leo_Whitefang/: Leo_Whitefang.json  aliases.json  images.json  info.json
data/May/: May.json  aliases.json  (+2 more)
docs/: PP.md  TOS.md
patch-notes/: 0.4.0.md  0.4.1.md  0.4.2.md  0.4.3.md  0.4.4.md  0.4.5.md  0.5.0.md  v0.4.2.md
patch_notes/: v0.4.0.md  v0.4.1.md
src/: check.rs  create.rs  find.rs  init_check.rs  main.rs  ran.rs  structs.rs
x/: Anji Mito  Asuka R  Axl Low  Baiken  Bedman  Bridget  Chipp Zanuff  Elphelt Valentine  Faust  Giovanna  Goldlewis Dickinson  Happy Chaos  I-No  Jack-O  Johnny  Ky Kiske  Leo Whitefang  May  Millia Rage  Nagoriyuki  Potemkin  Queen Dizzy  Ramlethal Valentine  Sin Kiske  Slayer  Sol Badguy  Testament  Unika  Venom  Zato-1
(+195 files in other folders)
