[package]
name = "baiken"
version = "1.0.0"
edition = "2021"
authors = ["yakiimoninja"]
repository = "https://github.com/yakiimoninja/baiken"
description = "A Discord bot that displays Guilty Gear Strive framedata and more."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
dotenv = "0.15"
serde_json = "1.0"
serde = "1.0.193"
rusqlite = { version = "0.32.1", features = ["bundled"] }
ureq = { version = "2.9.0", features = ["charset"] }
md-5 = "0.10.6"
rand = "0.8.5"
colored = "2.0.4"
